Added Rental Api

--- a/Videoque/Videoque.csproj
+++ b/Videoque/Videoque.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\Api\CustomersController.cs" />
     <Compile Include="Controllers\Api\MoviesController.cs" />
+    <Compile Include="Controllers\Api\NewRentalsController.cs" />
     <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -207,6 +208,7 @@
     <Compile Include="Dtos\GenreDto.cs" />
     <Compile Include="Dtos\MembershipTypeDto.cs" />
     <Compile Include="Dtos\MovieDto.cs" />
+    <Compile Include="Dtos\NewRentalDto.cs" />
     <Compile Include="GlimpseSecurityPolicy.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -227,6 +229,14 @@
     <Compile Include="Migrations\202008251240537_AddPhoneToApplicationUser.Designer.cs">
       <DependentUpon>202008251240537_AddPhoneToApplicationUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202008251557152_AddRental.cs" />
+    <Compile Include="Migrations\202008251557152_AddRental.Designer.cs">
+      <DependentUpon>202008251557152_AddRental.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202008251735440_AddNumberAvailableToMovie.cs" />
+    <Compile Include="Migrations\202008251735440_AddNumberAvailableToMovie.Designer.cs">
+      <DependentUpon>202008251735440_AddNumberAvailableToMovie.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\ExternalLoginListViewModel.cs" />
@@ -242,6 +252,7 @@
     <Compile Include="Models\Min18YearsIfAMember.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Models\RegisterViewModel.cs" />
+    <Compile Include="Models\Rental.cs" />
     <Compile Include="Models\ResetPasswordViewModel.cs" />
     <Compile Include="Models\RoleName.cs" />
     <Compile Include="Models\SendCodeViewModel.cs" />
@@ -530,6 +541,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202008251240537_AddPhoneToApplicationUser.resx">
       <DependentUpon>202008251240537_AddPhoneToApplicationUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202008251557152_AddRental.resx">
+      <DependentUpon>202008251557152_AddRental.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202008251735440_AddNumberAvailableToMovie.resx">
+      <DependentUpon>202008251735440_AddNumberAvailableToMovie.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
